tests/snapshots/integration_tests__basic.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.client.request.duration",
                    ),
                    labels: [
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "url.scheme",
                            "http",
                        ),
                        Label(
                            "network.protocol.name",
                            "http",
                        ),
                        Label(
                            "server.address",
                            "127.0.0.1",
                        ),
                        Label("server.port", [PORT]),
                        Label(
                            "network.protocol.version",
                            "1.1",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                    ],
                    hash: [HASH],
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "Duration of HTTP client requests.",
            ),
            Histogram([HISTOGRAM_VALUE]),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.client.request.body.size",
                    ),
                    labels: [
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "url.scheme",
                            "http",
                        ),
                        Label(
                            "network.protocol.name",
                            "http",
                        ),
                        Label(
                            "server.address",
                            "127.0.0.1",
                        ),
                        Label("server.port", [PORT]),
                        Label(
                            "network.protocol.version",
                            "1.1",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                    ],
                    hash: [HASH],
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "Size of HTTP client request bodies.",
            ),
            Histogram([HISTOGRAM_VALUE]),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.client.response.body.size",
                    ),
                    labels: [
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "url.scheme",
                            "http",
                        ),
                        Label(
                            "network.protocol.name",
                            "http",
                        ),
                        Label(
                            "server.address",
                            "127.0.0.1",
                        ),
                        Label("server.port", [PORT]),
                        Label(
                            "network.protocol.version",
                            "1.1",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                    ],
                    hash: [HASH],
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "Size of HTTP client response bodies.",
            ),
            Histogram([HISTOGRAM_VALUE]),
        ),
    ],
)
