tests/snapshots/integration_tests__enable_uri.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http_client_requests_seconds",
                    ),
                    labels: [
                        Label(
                            "client_name",
                            "127.0.0.1",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "outcome",
                            "SUCCESS",
                        ),
                        Label(
                            "scheme",
                            "http",
                        ),
                        Label(
                            "host",
                            "127.0.0.1",
                        ),
                        Label("port", [PORT]),
                        Label(
                            "status",
                            "200",
                        ),
                        Label(
                            "uri",
                            "/hello",
                        ),
                    ],
                    hashed: true,
                    hash: [HASH],
                },
            ),
            None,
            None,
            Histogram([HISTOGRAM_VALUE]),
        ),
    ],
)
